--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,33 @@
-# Java / Maven
+# === Backend (Java / Maven) ===
 api/target/
 api/.mvn/wrapper/maven-wrapper.jar
 
-# Node
+# === Frontend (Node / Vite) ===
 fintrack-ui/node_modules/
 fintrack-ui/.vite/
 fintrack-ui/dist/
+fintrack-ui/dist-ssr/
+fintrack-ui/*.local
 
-# IDE files
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# === IDE files ===
 .idea/
 .vscode/
 *.iml
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# OS-specific
+# === OS-specific ===
 .DS_Store
 Thumbs.db
-
-# Logs
-*.log
