--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=fintrack-api
+
+# Flyway runs V1, V2, V3... on startup
+spring.flyway.enabled=true
+
+# Keep validation on so Hibernate doesn’t auto-create columns behind Flyway’s back
+spring.jpa.hibernate.ddl-auto=validate
