--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.flyway.enabled=true
 
 # Keep validation on so Hibernate doesn’t auto-create columns behind Flyway’s back
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.web.resources.add-mappings=true
+spring.mvc.static-path-pattern=/uploads/**
